# miditeachpython

./: .gitignore  2021-06-12 17-12-45.webm  GameView.py  LICENSE  MANIFEST.in  PauseView.py  README.md  WelcomeScreen.py  build_win.ps1  launch_midiTeacher.py  midiTeacher.py  miditeach.spec  pyproject.toml  setup.py  soundmiditeacher.wav.asd
miditeach/: __init__.py  launch_midiTeacher.py  launch_midiTeacher.spec  miditeach.py  read_stats.py
miditeach/views/: GameView.py  LaunchView.py  StopView.py  WelcomeScreen.py
views/: GameView.py
