[tool.poetry]
name = "miditeach"
version = "0.6"
description = "midiTeach is a music learning tool that can be used to practice your chords skills with a midi keyboard 🎹 !"
authors = ["Alexis LOUIS <alelouis.dev@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
arcade = "^2.5.7"
mido = "^1.2.10"
python-rtmidi = "^1.4.9"
poetry-version = "^0.1.5"
pyinstaller = "^4.3"
pygame = "^2.0.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
miditeach = "miditeach.miditeach:main"
